--- a/backend/user-service/Dockerfile
+++ b/backend/user-service/Dockerfile
@@ -1,18 +1,12 @@
-# Base image
-FROM node:18
+# Base image with explicit platform
+FROM node:20-alpine
 
-# Set working directory
 WORKDIR /app
 
-# Copy package.json and install dependencies
 COPY package*.json ./
 RUN npm install
 
-# Copy the rest of the app code
 COPY . .
 
-# Expose the service port
 EXPOSE 3001
-
-# Start the application
-CMD ["npm", "start"]
+CMD ["node", "index.js"]
