--- a/backend/product-service/package.json
+++ b/backend/product-service/package.json
@@ -6,8 +6,8 @@
         "start": "node index.js"
     },
     "dependencies": {
-        "better-sqlite3": "^11.9.1",
         "cors": "^2.8.5",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "pg": "^8.15.6"
     }
 }
