--- a/.github/workflows/release-dispatch.yml
+++ b/.github/workflows/release-dispatch.yml
@@ -1,4 +1,4 @@
-name: Dispatch Release to Infra Repo
+name: Notify Infra on Release
 
 on:
   release:
@@ -7,16 +7,19 @@ on:
 jobs:
   notify-infra:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Send repository_dispatch to infra repo
-        run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: token ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}" \
-            https://api.github.com/repos/dingjunyu888/final-devops-infra/dispatches \
-            -d '{
+    - name: Send dispatch to infra repo
+      env:
+        GH_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}  # Must have `repo` scope
+      run: |
+        curl -X POST https://api.github.com/repos/dingjunyu888/final-devops-infra/dispatches \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer $GH_TOKEN" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        -d '{
               "event_type": "trigger-uat-deploy",
               "client_payload": {
-                "release_title": "${{ github.event.release.name }}"
+                "release_title": "'"${{ github.event.release.name }}"'"
               }
             }'
