--- a/.github/workflows/release-dispatch.yml
+++ b/.github/workflows/release-dispatch.yml
@@ -9,14 +9,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Notify infra repo
-        run: |
-          curl -X POST https://api.github.com/repos/dingjunyu888/final-devops-infra/dispatches \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}" \
-            -d '{
+    - name: Send dispatch to infra repo
+      env:
+        GH_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}  # Must have `repo` scope
+      run: |
+        curl -X POST https://api.github.com/repos/dingjunyu888/final-devops-infra/dispatches \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer $GH_TOKEN" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        -d '{
               "event_type": "trigger-uat-deploy",
               "client_payload": {
-                "tag": "${{ github.event.release.tag_name }}"
+                "release_title": "'"${{ github.event.release.name }}"'"
               }
             }'
