--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,6 @@
-VITE_USER_SERVICE=http://aa94bc7eb70e347ada2f951e2a4b179e-1662349398.us-east-1.elb.amazonaws.com/users
-VITE_PRODUCT_SERVICE=http://a72b62d7c10b44421a846df529dd7f4e-1551964995.us-east-1.elb.amazonaws.com/products
-VITE_ORDER_SERVICE=http://a02a471cee55d4936ac718cb6075101d-77068211.us-east-1.elb.amazonaws.com/orders
+# VITE_USER_SERVICE=http://aa94bc7eb70e347ada2f951e2a4b179e-1662349398.us-east-1.elb.amazonaws.com/users
+# VITE_PRODUCT_SERVICE=http://a72b62d7c10b44421a846df529dd7f4e-1551964995.us-east-1.elb.amazonaws.com/products
+# VITE_ORDER_SERVICE=http://a02a471cee55d4936ac718cb6075101d-77068211.us-east-1.elb.amazonaws.com/orders
+VITE_USER_SERVICE=http://a7b02e77db50c40529fc1df04515dec1-591332613.us-east-1.elb.amazonaws.com/users
+VITE_PRODUCT_SERVICE=http://a34b8c335e71142cbac1799393fb7200-309150385.us-east-1.elb.amazonaws.com/products
+VITE_ORDER_SERVICE=http://a56841844732e493e8dda4e66dd49d30-452556172.us-east-1.elb.amazonaws.com/orders
